syntax = "proto3";

option java_multiple_files=true;
option java_package="patient";

service PatientService{
  rpc RegisterNewPatient (PatientRegistrationRequest) returns (PatientRegistrationResponse);

  rpc GetPatientDetails (PatientDetailsRequest) returns (PatientDetails);

  //Registring multiple patients
  rpc StreamPatients (stream PatientRegistrationRequest) returns (Empty);
}


message PatientRegistrationRequest{
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  string address = 5;
}

message PatientRegistrationResponse{
  int64 patient_id = 1;
  string message = 2;
}

message PatientDetailsRequest {
  int64 patient_id = 1;
}

message PatientDetails {
  int64 patient_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
}

message Empty{

}